# AI-Atomic-Framework

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  TASK-APO-0030-python-language-adapter-plugin.task.md  TASK-APO-0031-historical-ledger-restore-standard-flow.task.md  atm.dev.mjs  atm.mjs  atomic-registry.json  compatibility-matrix.json  eslint-warnings-utf8.txt  eslint-warnings.txt  eslint.config.mjs  known-bad-versions.json  package-lock.json  package.json  temp.txt  tmp_get_git.ps1  tsconfig.json
.atm/: config.json
.claude/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
atomic_workbench/: generator-provenance-audit.json  map-generator-provenance-audit.json  registry-catalog.md
docs/: ADAPTER_GUIDE.md  AGENT_OPERATING_LAYER_ENHANCEMENT.md  AGENT_PACK_ONBOARDING.md  ARCHITECTURE.md  ATM_NEW_USER_WORKFLOW.md  ATOMIZATION_COVERAGE_TAXONOMY.md  ATOM_EVOLUTION_PLAN.md  ATOM_GENERATOR.md  ATOM_SPACE_LAYOUT.md  BRIDGE_MINOR.md  BROKER_GUIDE.md  CID_SEMANTICS.md  DEPRECATIONS.md  DIST_TAGS.md  ECOSYSTEM_POSITIONING.md  ERROR_CODES.md  EXPERIMENTAL_API.md  HOST_GOVERNANCE_INTEGRATION.md  INCIDENT_RESPONSE.md  LIFECYCLE.md  MAP_REPLACEMENT_PROTOCOL.md  META_SCHEMA.md  POST_MERGE_CHECKLIST.md  QUICK_START.md  SECURITY.md  SELF_HOSTING_ALPHA.md  (+11 more)
fixtures/python-adapter/synthetic-adopter/: pyproject.toml
fixtures/python-adapter/synthetic-adopter/pipelines/: ingest.py
fixtures/python-adapter/synthetic-adopter/synthetic_python_adopter/: __main__.py  cli.py
(+12533 files in other folders)
