[project]
name = "synthetic-python-adopter"
version = "0.0.1"
description = "Python-only synthetic adopter for ATM language-python adapter tests."
requires-python = ">=3.10"

[project.scripts]
synth = "synthetic_python_adopter.cli:main"
synth-test = "synthetic_python_adopter.cli:run_tests"

[tool.poetry]
name = "synthetic-python-adopter"
version = "0.0.1"
description = "Python-only synthetic adopter for ATM language-python adapter tests."
authors = ["ATM contributors"]
